ardupilot_ws/logs/my_APMrover/build.make.061.log.stderr
/home/scp/iiit-delhi/Ardupilot-using-ROS/ardupilot_ws/src/my_APMrover/src/rover_P_control.cpp: In function ‘int main(int, char**)’:
/home/scp/iiit-delhi/Ardupilot-using-ROS/ardupilot_ws/src/my_APMrover/src/rover_P_control.cpp:109:22: error: expected primary-expression before ‘;’ token
     target_LA.data = ;
                      ^
/home/scp/iiit-delhi/Ardupilot-using-ROS/ardupilot_ws/src/my_APMrover/src/rover_P_control.cpp:111:22: error: expected primary-expression before ‘;’ token
     target_LO.data = ;
                      ^
make[2]: *** [CMakeFiles/rover_P_control.dir/src/rover_P_control.cpp.o] Error 1
make[1]: *** [CMakeFiles/rover_P_control.dir/all] Error 2
make: *** [all] Error 2
